--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="box-border"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://kit.fontawesome.com/a36b45334e.js" crossorigin="anonymous"></script>
   </body>
